[Fix] 경매 중 상품 id 연결